fix: align media queries

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -96,7 +96,7 @@
   border: none;
 }
 
-@media (max-width: 376px) {
+@media (max-width: 480px) {
   .navItemsWrapper {
     display: none;
   }
@@ -107,7 +107,7 @@
   }
 }
 
-@media (min-width: 377px) {
+@media (min-width: 481px) {
   .menu {
     display: none !important;
   }
